<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/first_name"
        android:textSize="22dp"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:id="@+id/firstName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/last_name"
        android:textSize="22dp"
        android:ems="10"
        android:layout_marginTop="36dp"
        android:id="@+id/lastName"
        android:layout_below="@+id/firstName"
        android:layout_alignLeft="@+id/firstName"
        android:layout_alignStart="@+id/firstName" />

    <Button
        android:text="@string/save"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:id="@+id/save"
        android:layout_below="@+id/date"
        android:layout_alignLeft="@+id/date"
        android:layout_alignStart="@+id/date"
        android:onClick="onClickSave" />

    <TextView
        android:hint="@string/date"
        android:textSize="22dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:id="@+id/date"
        android:layout_below="@+id/lastName"
        android:layout_alignLeft="@+id/lastName"
        android:layout_alignStart="@+id/lastName"
        android:clickable="true"/>

</RelativeLayout>